Added github link and social icons togetheger with live link

--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
       </div>
 
       <div class="socials">
-        <a href="#" title="GitHub">🐙</a>
-        <a href="#" title="LinkedIn">💼</a>
-        <a href="#" title="Instagram">📷</a>
+        <a href="https://github.com/valndanu1" title="GitHub"><img src="images/github_icon.png" alt=""></a>
+        <a href="https://linkedin.com/in/valerie-ndanu" title="LinkedIn"><img src="images/linkedin_icon.png" alt=""></a>
+        <a href="https://instagram.com/valeriendanu_mutulu" title="Instagram"><img src="images/instagram_icon.png" alt=""></a>
       </div>
     </div>
 
     <div class="hero-image">
       <div class="image-card">
-        <img src="profile.jpeg" alt="Valerie Ndanu Mutulu" width="200" height="200">
+        <img src="images/profile.jpeg" alt="Valerie Ndanu Mutulu" width="200" height="200">
       </div>
     </div>
   </section>
@@ -145,8 +145,8 @@
           <span>HTML</span><span>CSS</span><span>JS</span>
         </div>
         <div class="project-buttons">
-          <a href="#" class="btn small primary">Live</a>
-          <a href="#" class="btn small outline">GitHub</a>
+          <a href="https://valndanu1.github.io/my-projects/" class="btn small primary">Live</a>
+          <a href="https://github.com/valndanu1" class="btn small outline">GitHub</a>
         </div>
       </div>
 
@@ -157,8 +157,8 @@
           <span>HTML</span><span>CSS</span><span>JS</span>
         </div>
         <div class="project-buttons">
-          <a href="#" class="btn small primary">Live</a>
-          <a href="#" class="btn small outline">GitHub</a>
+          <a href="https://valndanu1.github.io/new-form/" class="btn small primary">Live</a>
+          <a href="https://github.com/valndanu1" class="btn small outline">GitHub</a>
         </div>
       </div>
 
@@ -170,7 +170,7 @@
         </div>
         <div class="project-buttons">
           <a href="#" class="btn small primary">Live</a>
-          <a href="#" class="btn small outline">GitHub</a>
+          <a href="https://github.com/valndanu1" class="btn small outline">GitHub</a>
         </div>
       </div>
     </div>
